Prepared for training 16-05

--- a/notebooks/nb_70_TrainingRLAgents.ipynb
+++ b/notebooks/nb_70_TrainingRLAgents.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "hide_input": true,
     "init_cell": true,
@@ -16,7 +15,6 @@
      "remove-output-nbconv"
     ]
    },
-   "outputs": [],
    "source": [
     "%%capture\n",
     "\n",
@@ -24,11 +22,12 @@
     "%autoreload 2\n",
     "%matplotlib inline\n",
     "%load_ext training_rl"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "hide_input": true,
     "init_cell": true,
@@ -40,184 +39,14 @@
      "remove-input-nbconv"
     ]
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>/*\n",
-       "This file is mainly copy-pasta from rise's examples\n",
-       "https://github.com/damianavila/RISE/blob/master/examples/rise.css\n",
-       "that was further customized for appliedAI purposes\n",
-       "*/\n",
-       "@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400&display=swap');\n",
-       "\n",
-       "\n",
-       "/*\n",
-       "body {\n",
-       "    font-family: 'Work Sans', sans-serif !important;\n",
-       "    text-transform: initial !important;\n",
-       "    letter-spacing: initial !important;\n",
-       "    font-weight: 400 !important;\n",
-       "    line-height: 1.5 !important;\n",
-       "    text-size-adjust: 100% !important;\n",
-       "    ‑webkit‑text‑size‑adjust: 100% !important;\n",
-       "}\n",
-       "\n",
-       "\n",
-       ".reveal, div.text_cell_render, .md-slide, .sidebar-wrapper {\n",
-       "    font-size: 1.5rem !important;\n",
-       "}\n",
-       "*/\n",
-       "\n",
-       ".navbar-default .navbar-nav > li > a {\n",
-       "    color: #00747b !important;\n",
-       "}\n",
-       "\n",
-       ".filename {\n",
-       "    font-size: 2.4rem !important;\n",
-       "    color: #212529 !important;\n",
-       "    font-weight: 600 !important;\n",
-       "}\n",
-       "\n",
-       ".reveal, .md-slide {\n",
-       "    color: white !important;\n",
-       "}\n",
-       "\n",
-       "h1, h2 {\n",
-       "    color: #00747b !important;\n",
-       "}\n",
-       "\n",
-       "h3, h4, h5, h6 {\n",
-       "    color: #808080 !important;\n",
-       "}\n",
-       "\n",
-       ".reveal p, .reveal ol, .reveal dl, .reveal ul,\n",
-       "div.text_cell_render {\n",
-       "    color: #212529 !important;\n",
-       "}\n",
-       "\n",
-       "/*copied from stackoverflow, better spacing between list items*/\n",
-       "li + li {\n",
-       "  margin-top: 0.2em;\n",
-       "}\n",
-       "\n",
-       "body.rise-enabled .reveal ol, body.rise-enabled .reveal dl, body.rise-enabled .reveal ul {\n",
-       "    margin-left: 0.1em;\n",
-       "    margin-top: 0.2em;\n",
-       "}\n",
-       "\n",
-       ".reveal .rendered_html h1:first-child,\n",
-       ".reveal .rendered_html h2:first-child,\n",
-       ".reveal .rendered_html h3:first-child,\n",
-       ".reveal .rendered_html h4:first-child,\n",
-       ".reveal .rendered_html h5:first-child {\n",
-       "    margin-top: 0.2em;\n",
-       "}\n",
-       "\n",
-       "/*\n",
-       ".CodeMirror-lines, .output_text {\n",
-       "    font-size: 1.5rem !important;\n",
-       "}\n",
-       "*/\n",
-       "\n",
-       "h1.plan, h2.plan, h3.plan {\n",
-       "    text-align: center;\n",
-       "    padding-bottom: 30px;\n",
-       "}\n",
-       "\n",
-       "ul.plan>li>span.plan-bold {\n",
-       "    font-size: 110%;\n",
-       "    padding: 4px;\n",
-       "    font-weight: bold;\n",
-       "    background-color: #eee;\n",
-       "}\n",
-       "\n",
-       "ul.plan>li>ul.subplan>li>span.plan-bold {\n",
-       "    font-weight: bold;\n",
-       "}\n",
-       "\n",
-       ".plan-strike {\n",
-       "    opacity: 0.4;\n",
-       "/*    text-decoration: line-through; */\n",
-       "}\n",
-       "\n",
-       "div.plan-container {\n",
-       "    display: grid;\n",
-       "    grid-template-columns: 50% 50%;\n",
-       "}\n",
-       "\n",
-       "/*\n",
-       " * this is to void xarray's html output to show the fallback textual representation\n",
-       " * see also\n",
-       "   * xarray.md and\n",
-       "   * https://github.com/damianavila/RISE/issues/594\n",
-       " */\n",
-       ".reveal pre.xr-text-repr-fallback {\n",
-       "    display: none;\n",
-       "}\n",
-       "\n",
-       "#toc-header, .toc-item li {\n",
-       "    margin: auto !important;\n",
-       "    color: #808080 !important;\n",
-       "}\n",
-       "\n",
-       "#toc, #toc-wrapper, .toc-item-num, #toc a, .toc {\n",
-       "    margin: auto !important;\n",
-       "    color: #00747b !important;\n",
-       "}\n",
-       "\n",
-       "#toc-wrapper {\n",
-       "    top: auto !important;\n",
-       "    bottom: auto !important;\n",
-       "    margin-top: 2rem !important;\n",
-       "    color: #00747b !important;\n",
-       "}\n",
-       "\n",
-       "\n",
-       "#rise-header {\n",
-       "    margin: 10px;\n",
-       "    left: 5%;\n",
-       "}\n",
-       "\n",
-       "#rise-footer {\n",
-       "    margin: 10px;\n",
-       "    right: 5%;\n",
-       "}\n",
-       "\n",
-       "#rise-backimage {\n",
-       "    opacity: 0.70;\n",
-       "}\n",
-       "\n",
-       ".reveal img {\n",
-       "    max-width: 100%;\n",
-       "}\n",
-       "\n",
-       "\n",
-       ".md-slide.title {\n",
-       "    position: relative;\n",
-       "    top: -50%;\n",
-       "    margin-left: 5%;\n",
-       "    font-size: 4em !important;\n",
-       "    line-height: 1.6;\n",
-       "}\n",
-       "</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "%presentation_style"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "hide_input": true,
     "init_cell": true,
@@ -231,16 +60,16 @@
      "remove-output-nbconv"
     ]
    },
-   "outputs": [],
    "source": [
     "%%capture\n",
     "\n",
     "%set_random_seed 12"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "hide_input": true,
     "init_cell": true,
@@ -252,33 +81,11 @@
      "remove-cell"
     ]
    },
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "\n",
-       "$\\newcommand{\\vect}[1]{{\\mathbf{\\boldsymbol{#1}} }}$\n",
-       "$\\newcommand{\\amax}{{\\text{argmax}}}$\n",
-       "$\\newcommand{\\P}{{\\mathbb{P}}}$\n",
-       "$\\newcommand{\\E}{{\\mathbb{E}}}$\n",
-       "$\\newcommand{\\R}{{\\mathbb{R}}}$\n",
-       "$\\newcommand{\\Z}{{\\mathbb{Z}}}$\n",
-       "$\\newcommand{\\N}{{\\mathbb{N}}}$\n",
-       "$\\newcommand{\\C}{{\\mathbb{C}}}$\n",
-       "$\\newcommand{\\abs}[1]{{ \\left| #1 \\right| }}$\n",
-       "$\\newcommand{\\simpl}[1]{{\\Delta^{#1} }}$\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
     "%load_latex_macros"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -314,9 +121,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "%load_ext tensorboard\n",
     "\n",
@@ -329,21 +138,34 @@
     "\n",
     "from tianshou.env import ShmemVectorEnv\n",
     "from tianshou.highlevel.config import SamplingConfig\n",
-    "from tianshou.highlevel.env import ContinuousEnvironments, EnvFactory\n",
+    "from tianshou.highlevel.env import ContinuousEnvironments, EnvFactory, EnvMode, VectorEnvType\n",
     "from tianshou.highlevel.experiment import (\n",
     "    ExperimentConfig,\n",
     ")\n",
-    "from training_rl.env_utils import demo_model\n"
-   ]
+    "from training_rl.env_utils import demo_model\n",
+    "from tianshou.highlevel.params.lr_scheduler import LRSchedulerFactoryLinear\n",
+    "from typing import Literal\n",
+    "import torch\n",
+    "from tianshou.highlevel.params.dist_fn import DistributionFunctionFactoryIndependentGaussians\n",
+    "from tianshou.highlevel.params.policy_params import PPOParams\n",
+    "from tianshou.highlevel.experiment import PPOExperimentBuilder\n",
+    "\n"
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "%tensorboard --logdir log --host localhost"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -356,32 +178,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from tianshou.highlevel.params.lr_scheduler import LRSchedulerFactoryLinear\n",
-    "from typing import Literal\n",
-    "import torch\n",
-    "from tianshou.highlevel.params.dist_fn import DistributionFunctionFactoryIndependentGaussians\n",
-    "from tianshou.highlevel.params.policy_params import PPOParams\n",
-    "from tianshou.highlevel.experiment import PPOExperimentBuilder\n",
-    "\n",
-    "\n",
     "def train_ppo_agent(\n",
     "    env_factory: EnvFactory,\n",
     "    experiment_config: ExperimentConfig = None,\n",
     "    buffer_size: int = 4096,\n",
     "    hidden_sizes: Sequence[int] = (64, 64),\n",
-    "    lr: float = 3e-4,\n",
+    "    lr: float = 3e-5,\n",
     "    gamma: float = 0.99,\n",
     "    epoch: int = 100,\n",
     "    step_per_epoch: int = 30000,\n",
     "    step_per_collect: int = 2048,\n",
-    "    repeat_per_collect: int = 10,\n",
+    "    repeat_per_collect: int = 5,\n",
     "    batch_size: int = 64,\n",
-    "    training_num: int = 64,\n",
-    "    test_num: int = 10,\n",
+    "    training_num: int = 1,\n",
+    "    test_num: int = 1,\n",
     "    rew_norm: bool = True,\n",
     "    vf_coef: float = 0.25,\n",
     "    ent_coef: float = 0.0,\n",
@@ -438,79 +250,85 @@
     "    )\n",
     "    experiment_result = experiment.run(log_name)\n",
     "    return experiment_result"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You already saw the gym-make based environment-creation above, we shall now use a different\n",
+    "way of creating environments that allows for more control."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
+    "from gymnasium import Env\n",
+    "\n",
+    "\n",
     "def get_pendulum_env(render_mode: Literal[\"rgb_array\"] | None = None):\n",
     "    return TimeLimit(PendulumEnv(render_mode=render_mode), max_episode_steps=200)\n",
     "\n",
     "\n",
-    "class PendulumEnvFactory(EnvFactory):\n",
-    "    def create_envs(\n",
-    "        self, num_training_envs: int, num_test_envs: int\n",
-    "    ) -> ContinuousEnvironments:\n",
-    "        env = get_pendulum_env()\n",
-    "        train_envs = ShmemVectorEnv([get_pendulum_env] * num_training_envs)\n",
-    "        test_envs = ShmemVectorEnv([get_pendulum_env] * num_test_envs)\n",
-    "        return ContinuousEnvironments(\n",
-    "            env=env,\n",
-    "            train_envs=train_envs,\n",
-    "            test_envs=test_envs,\n",
-    "        )"
-   ]
+    "class PendulumEnvFactory(EnvFactory):    \n",
+    "    def create_env(\n",
+    "        self, mode: EnvMode,\n",
+    "    ) -> Env:\n",
+    "        return get_pendulum_env(\"rgb_array\" if mode == EnvMode.WATCH else None)"
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
+    "env_factory = PendulumEnvFactory(VectorEnvType.DUMMY)\n",
+    "\n",
     "exp_result = train_ppo_agent(\n",
-    "    PendulumEnvFactory(), epoch=1, step_per_epoch=20000, training_num=10,test_num=1\n",
+    "    env_factory, epoch=20, test_num=1\n",
     ")\n",
     "policy = exp_result.world.policy\n"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "source": "pend_env = env_factory.create_env(EnvMode.WATCH)",
    "outputs": [],
-   "source": [
-    "pend_env = gym.make(\"Pendulum-v1\", render_mode=\"rgb_array\")"
-   ]
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "obs, info = pend_env.reset()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "policy.compute_action(obs, info)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "demo_model(pend_env, policy.compute_action, 200)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -542,9 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "from os import path\n",
     "from typing import Optional\n",
@@ -824,27 +640,29 @@
     "\n",
     "def angle_normalize(x):\n",
     "    return ((x + np.pi) % (2 * np.pi)) - np.pi\n"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "sparse_env = TimeLimit(CustomPendulumEnv(), max_episode_steps=100)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "exp_result = train_ppo_agent(\n",
-    "    PendulumEnvFactory(), epoch=1, step_per_epoch=20000, training_num=10,test_num=1\n",
+    "    PendulumEnvFactory(VectorEnvType.DUMMY), epoch=1, step_per_epoch=20000, training_num=10,test_num=1\n",
     ")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -861,15 +679,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "env = get_pendulum_env(render_mode=\"rgb_array\")\n",
     "\n",
     "\n",
     "demo_model(env, policy.compute_action, num_steps=400)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -937,7 +755,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   },
   "rise": {
    "footer": "<img src='_static/images/aai-logo.png' alt='logo' height='50em'>",
@@ -960,10 +778,10 @@
     "height": "563.2px",
     "left": "125px",
     "top": "116.469px",
-    "width": "315.6px"
+    "width": "293.4px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   },
   "varInspector": {
    "cols": {
