--- a/notebooks/nb_75_EnvironmentEngineering.ipynb
+++ b/notebooks/nb_75_EnvironmentEngineering.ipynb
@@ -2,11 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "metadata": {},
    "source": [
     "%%capture\n",
     "\n",
@@ -14,241 +10,42 @@
     "%autoreload 2\n",
     "%matplotlib inline\n",
     "%load_ext training_rl"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>/*\n",
-       "This file is mainly copy-pasta from rise's examples\n",
-       "https://github.com/damianavila/RISE/blob/master/examples/rise.css\n",
-       "that was further customized for appliedAI purposes\n",
-       "*/\n",
-       "@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400&display=swap');\n",
-       "\n",
-       "\n",
-       "/*\n",
-       "body {\n",
-       "    font-family: 'Work Sans', sans-serif !important;\n",
-       "    text-transform: initial !important;\n",
-       "    letter-spacing: initial !important;\n",
-       "    font-weight: 400 !important;\n",
-       "    line-height: 1.5 !important;\n",
-       "    text-size-adjust: 100% !important;\n",
-       "    ‑webkit‑text‑size‑adjust: 100% !important;\n",
-       "}\n",
-       "\n",
-       "\n",
-       ".reveal, div.text_cell_render, .md-slide, .sidebar-wrapper {\n",
-       "    font-size: 1.5rem !important;\n",
-       "}\n",
-       "*/\n",
-       "\n",
-       ".navbar-default .navbar-nav > li > a {\n",
-       "    color: #00747b !important;\n",
-       "}\n",
-       "\n",
-       ".filename {\n",
-       "    font-size: 2.4rem !important;\n",
-       "    color: #212529 !important;\n",
-       "    font-weight: 600 !important;\n",
-       "}\n",
-       "\n",
-       ".reveal, .md-slide {\n",
-       "    color: white !important;\n",
-       "}\n",
-       "\n",
-       "h1, h2 {\n",
-       "    color: #00747b !important;\n",
-       "}\n",
-       "\n",
-       "h3, h4, h5, h6 {\n",
-       "    color: #808080 !important;\n",
-       "}\n",
-       "\n",
-       ".reveal p, .reveal ol, .reveal dl, .reveal ul,\n",
-       "div.text_cell_render {\n",
-       "    color: #212529 !important;\n",
-       "}\n",
-       "\n",
-       "/*copied from stackoverflow, better spacing between list items*/\n",
-       "li + li {\n",
-       "  margin-top: 0.2em;\n",
-       "}\n",
-       "\n",
-       "body.rise-enabled .reveal ol, body.rise-enabled .reveal dl, body.rise-enabled .reveal ul {\n",
-       "    margin-left: 0.1em;\n",
-       "    margin-top: 0.2em;\n",
-       "}\n",
-       "\n",
-       ".reveal .rendered_html h1:first-child,\n",
-       ".reveal .rendered_html h2:first-child,\n",
-       ".reveal .rendered_html h3:first-child,\n",
-       ".reveal .rendered_html h4:first-child,\n",
-       ".reveal .rendered_html h5:first-child {\n",
-       "    margin-top: 0.2em;\n",
-       "}\n",
-       "\n",
-       "/*\n",
-       ".CodeMirror-lines, .output_text {\n",
-       "    font-size: 1.5rem !important;\n",
-       "}\n",
-       "*/\n",
-       "\n",
-       "h1.plan, h2.plan, h3.plan {\n",
-       "    text-align: center;\n",
-       "    padding-bottom: 30px;\n",
-       "}\n",
-       "\n",
-       "ul.plan>li>span.plan-bold {\n",
-       "    font-size: 110%;\n",
-       "    padding: 4px;\n",
-       "    font-weight: bold;\n",
-       "    background-color: #eee;\n",
-       "}\n",
-       "\n",
-       "ul.plan>li>ul.subplan>li>span.plan-bold {\n",
-       "    font-weight: bold;\n",
-       "}\n",
-       "\n",
-       ".plan-strike {\n",
-       "    opacity: 0.4;\n",
-       "/*    text-decoration: line-through; */\n",
-       "}\n",
-       "\n",
-       "div.plan-container {\n",
-       "    display: grid;\n",
-       "    grid-template-columns: 50% 50%;\n",
-       "}\n",
-       "\n",
-       "/*\n",
-       " * this is to void xarray's html output to show the fallback textual representation\n",
-       " * see also\n",
-       "   * xarray.md and\n",
-       "   * https://github.com/damianavila/RISE/issues/594\n",
-       " */\n",
-       ".reveal pre.xr-text-repr-fallback {\n",
-       "    display: none;\n",
-       "}\n",
-       "\n",
-       "#toc-header, .toc-item li {\n",
-       "    margin: auto !important;\n",
-       "    color: #808080 !important;\n",
-       "}\n",
-       "\n",
-       "#toc, #toc-wrapper, .toc-item-num, #toc a, .toc {\n",
-       "    margin: auto !important;\n",
-       "    color: #00747b !important;\n",
-       "}\n",
-       "\n",
-       "#toc-wrapper {\n",
-       "    top: auto !important;\n",
-       "    bottom: auto !important;\n",
-       "    margin-top: 2rem !important;\n",
-       "    color: #00747b !important;\n",
-       "}\n",
-       "\n",
-       "\n",
-       "#rise-header {\n",
-       "    margin: 10px;\n",
-       "    left: 5%;\n",
-       "}\n",
-       "\n",
-       "#rise-footer {\n",
-       "    margin: 10px;\n",
-       "    right: 5%;\n",
-       "}\n",
-       "\n",
-       "#rise-backimage {\n",
-       "    opacity: 0.70;\n",
-       "}\n",
-       "\n",
-       ".reveal img {\n",
-       "    max-width: 100%;\n",
-       "}\n",
-       "\n",
-       "\n",
-       ".md-slide.title {\n",
-       "    position: relative;\n",
-       "    top: -50%;\n",
-       "    margin-left: 5%;\n",
-       "    font-size: 4em !important;\n",
-       "    line-height: 1.6;\n",
-       "}\n",
-       "</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {},
    "source": [
     "%presentation_style"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "metadata": {},
    "source": [
     "%%capture\n",
     "\n",
     "%set_random_seed 12"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "\n",
-       "$\\newcommand{\\vect}[1]{{\\mathbf{\\boldsymbol{#1}} }}$\n",
-       "$\\newcommand{\\amax}{{\\text{argmax}}}$\n",
-       "$\\newcommand{\\P}{{\\mathbb{P}}}$\n",
-       "$\\newcommand{\\E}{{\\mathbb{E}}}$\n",
-       "$\\newcommand{\\R}{{\\mathbb{R}}}$\n",
-       "$\\newcommand{\\Z}{{\\mathbb{Z}}}$\n",
-       "$\\newcommand{\\N}{{\\mathbb{N}}}$\n",
-       "$\\newcommand{\\C}{{\\mathbb{C}}}$\n",
-       "$\\newcommand{\\abs}[1]{{ \\left| #1 \\right| }}$\n",
-       "$\\newcommand{\\simpl}[1]{{\\Delta^{#1} }}$\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "metadata": {},
    "source": [
     "%load_latex_macros"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "<img src=\"_static/images/aai-institute-cover.png\" alt=\"Snow\" style=\"width:100%;\">\n",
     "<div class=\"md-slide title\">Environments and Feature Engineering </div>"
@@ -318,7 +115,7 @@
    "source": [
     "In this notebook we introduce you to gym's basic interfaces and to strategies for feature engineering\n",
     "and reward shaping. As you will see, the software design is quite different to non-RL machine learning.\n",
-    "The topics presented here will be relevant for almost any kind of RL project."
+    "The topics presented here will be relevant for almost any kind of RL project in industry applications."
    ]
   },
   {
@@ -334,14 +131,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": true,
      "name": "#%%\n"
     }
    },
-   "outputs": [],
    "source": [
     "import logging\n",
     "\n",
@@ -357,21 +152,23 @@
     "from functools import reduce\n",
     "from numbers import Number\n",
     "from typing import TypeVar, Generic, Sequence"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
    "source": [
     "env = PendulumEnv(g=10)\n",
     "env = TimeLimit(env, max_episode_steps=200)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -413,13 +210,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
    "source": [
     "class AddThetadotSquaredWrapper(ObservationWrapper):\n",
     "    def __init__(self, env: PendulumEnv):\n",
@@ -437,21 +232,23 @@
     "        result = list(observation)\n",
     "        result.append(thetadot ** 2)\n",
     "        return np.array(result)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
    "source": [
     "extended_env = AddThetadotSquaredWrapper(env)\n",
     "extended_env.reset()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -486,26 +283,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
    "source": [
     "extended_env"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
    "source": [
     "class ScalarObservation(ABC):\n",
     "    \"\"\"\n",
@@ -577,7 +372,9 @@
     "\n",
     "    def __str__(self):\n",
     "        return \"_\".join([obs.__str__() for obs in self.observations])"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -592,13 +389,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
    "source": [
     "class BaseObservation(ScalarObservation):\n",
     "    @property\n",
@@ -627,17 +422,17 @@
     "    def observation(self, arr: np.ndarray):\n",
     "        thetadot = arr[-1]\n",
     "        return np.array([thetadot ** 3])"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
    "source": [
     "obs1 = BaseObservation()\n",
     "obs2 = ThetadotSquaredObservation()\n",
@@ -645,32 +440,41 @@
     "\n",
     "full_obs = ConcatenatedScalarObservation(obs1, obs2, obs3)\n",
     "enhanced_env = ScalarObservationWrapper(env, full_obs)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
    "source": [
     "enhanced_env"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
    "source": [
     "enhanced_env.observation_space"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Up and down-sides of doing this in the env vs. in the agent"
    ]
   },
   {
@@ -692,13 +496,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
    "source": [
     "from gymnasium import RewardWrapper\n",
     "\n",
@@ -707,7 +509,9 @@
     "    def reward(self, reward):\n",
     "        #      do something with the reward\n",
     "        return reward"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -742,17 +546,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
    "source": [
     "from gymnasium.envs.classic_control.pendulum import angle_normalize\n",
     "from typing import Tuple, Callable\n",
     "\n",
+    "# TODO: go away from __call__\n",
     "\n",
     "class PendulumRewardMetric(ABC):\n",
     "    \"\"\"\n",
@@ -809,7 +612,9 @@
     "\n",
     "        self.state = np.array([newth, newthdot])\n",
     "        return self._get_obs(), reward, False, {}"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -825,13 +630,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
    "source": [
     "class WithinRegionRewardMetric(PendulumRewardMetric):\n",
     "    def __init__(self, theta_min: float, theta_max: float):\n",
@@ -850,7 +653,9 @@
     "within_region_reward = WithinRegionRewardMetric(-np.pi / 4, np.pi / 4)\n",
     "\n",
     "target_region_pendulum_env = ModularPendulumEnv(reward_metric=within_region_reward)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -886,13 +691,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
    "source": [
     "log = logging.getLogger(__name__)\n",
     "\n",
@@ -1028,7 +831,9 @@
     "    @property\n",
     "    def range(self) -> Tuple[float, float]:\n",
     "        return self._range"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -1044,17 +849,24 @@
     "here can be applied in many situations. You could for example:\n",
     "\n",
     "    1. Make an abstract base environment class with modularity along the lines of `ModularPendulumEnv` permitting simple injection\n",
-    "       of rewardsa as well as an injection episode termination criteria.\n",
+    "       of rewards as well as an injectionc of episode termination criteria.\n",
     "    2. Extend the concatenation of observation to images. Implement this for an atari game - one could envision that adding\n",
     "       additional channels to the input (e.g. mirroring or passing through an edge detector) could boost performance of\n",
-    "       RL agents acting directly on pixel\n",
+    "       RL agents acting directly on pixels\n",
     "    3. Try reproducing some gym environments with the modular interfaces\n",
     "    4. Think about how a curriculum could be added to an environment - an adaptation of the task based on time or on the agent's\n",
     "       current performance\n",
     "    5. Try to develop a scheme for creating environments, including observations, rewards and so on, from configuration\n",
-    "       (json, yaml or some format of your choice). How would you approach it? Think about versioning of configuration schemas\n",
+    "       (python config class or json, yaml or some format of your choice). How would you approach it? Think about versioning of configuration schemas\n",
     "       and issues of backwards compatibility.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "source": [],
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
@@ -1073,7 +885,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
